code25_all/swift/24874366.txt
init()
init() {
    let q = 0
    dispatch_sync(queue) {
        self._state = State(q)
    }
}

_state
State
queue
dispatch_sync
_state
main.swift:363:37: error: variable 'self._state' used before being initialized
    dispatch_sync(s_sync_queue) {
                                ^

_state
main.swift:372:5: error: property 'self._state' not initialized
}
^

dispatch_sync
init
_state
